--- a/app/src/main/res/layout/activity_admin_new_orders.xml
+++ b/app/src/main/res/layout/activity_admin_new_orders.xml
@@ -24,13 +24,13 @@
             android:layout_marginTop="10dp"/>
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.appcompat.widget.RecyclerView
         android:id="@+id/orders_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/r2"
         >
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.appcompat.widget.RecyclerView>
 
 </RelativeLayout>
