--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/new_product_details"
-                android:text="Product Name"
+                android:text="Jordan 4's"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/product_name_details"
-                android:text="Product Price"
+                android:text="Ksh 3,999"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/product_price_details"
-                android:text="Product Description"
+                android:text="used for running and other exercises"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 android:textSize="16sp"
