--- a/app/src/main/res/layout/activity_admin_user_products.xml
+++ b/app/src/main/res/layout/activity_admin_user_products.xml
@@ -23,13 +23,13 @@
             android:layout_marginTop="10dp"/>
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.appcompat.widget.RecyclerView
         android:id="@+id/product_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/r3"
         >
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.appcompat.widget.RecyclerView>
 
 </RelativeLayout>
